package update & build

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,24 +1,17 @@
 image: node:latest
 
 stages:
-  - prebuild
-  - build
-  - deploy
+  - buildAndDeploy
 
-prebuild_package:
-  stage: prebuild
-  script:
-    - |
-      {
-        npm i
-      }
-
-build_package:
-  stage: build
+build_only:
+  stage: buildAndDeploy
+  except:
+    - master
   script:
     - |
       {
         npm i -g typescript ts-node nodemon &&
+        npm i &&
         npm run build &&
         echo "Successfully built version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME}"
       }
@@ -26,15 +19,17 @@ build_package:
 # Publish the package. If the version in package.json has not yet been published, it will be
 # published to THE NPM registry. If the version already exists, the publish command
 # will fail and the existing package will not be updated.
-publish_package:
-  stage: deploy
+build_and_deploy:
+  stage: buildAndDeploy
   only:
     - master
   script:
     - |
       {
-        npm install -g npm-cli-login &&
-        npm-cli-login -u $K8S_SECRET_NPM_USERNAME -p $K8S_SECRET_NPM_TOKEN -e $K8S_SECRET_NPM_EMAIL &&
+        echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" >> ~/.npmrc &&
+        npm i -g typescript ts-node nodemon &&
+        npm i &&
+        npm run build &&
         npm run deploy &&
         echo "Successfully published version ${NPM_PACKAGE_VERSION} of ${NPM_PACKAGE_NAME} to NPM"
       } || {
