Updated methods and added the ability to trigger events/actions from another plugin. Cleanups and updates.

--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "install-plugin.js"
   ],
   "main": "lib/index.js",
-  "version": "3.0.7-test2",
+  "version": "3.0.8",
   "dependencies": {
     "@bettercorp/tools": "^1.0.5",
     "@types/node": "^14.11.2",
