--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -5,6 +5,11 @@ RUN npm i -g typescript@4.3.5 ts-node@10.0.0
 
 WORKDIR /home/bsb
 
+# Default plugins available
+RUN npm i --save @bettercorp/service-base-plugin-events-rabbitmq
+RUN npm i --save @bettercorp/service-base-plugin-log-gelf
+
+# Actual plugin/service
 RUN npm i --save @bettercorp/${SERVICE}@${RELEASE}
 
 CMD npm start
