--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -1,5 +1,8 @@
 FROM node:lts-alpine
 
+ARG SERVICE
+ARG RELEASE
+
 RUN apk update
 RUN npm i -g typescript@4.3.5 ts-node@10.0.0
 
@@ -10,6 +13,6 @@ RUN npm i --save @bettercorp/service-base-plugin-events-rabbitmq
 RUN npm i --save @bettercorp/service-base-plugin-log-gelf
 
 # Actual plugin/service
-RUN npm i --save @bettercorp/${SERVICE}@${RELEASE}
+RUN npm i --save @bettercorp/$SERVICE@$RELEASE
 
 CMD npm start
