--- a/package.json
+++ b/package.json
@@ -11,18 +11,9 @@
     "postinstall": "node ./install.js",
     "version": "node ./build/version.js $0"
   },
-  "files": [
-    "tsconfig.json",
-    "tslint.json",
-    "sourceFiles/**/*",
-    "lib/**/*",
-    "build/**/*",
-    "docker/**/*",
-    "install.js",
-    "install-plugin.js"
-  ],
+  "files": ["tsconfig.json", "tslint.json", "sourceFiles/**/*", "lib/**/*", "build/**/*", "docker/**/*", "install.js", "install-plugin.js"],
   "main": "lib/index.js",
-  "version": "4.1.0",
+  "version": "4.1.20210608225858",
   "dependencies": {
     "@bettercorp/tools": "^1.0.6",
     "@types/node": "^14.14.22",
