--- a/docker/DockerFile
+++ b/docker/DockerFile
@@ -1,24 +1,7 @@
-FROM node:lts-alpine
+FROM betterweb/better-service-base:latest
 
-ARG SERVICE
-ARG RELEASE
-
-RUN apk update
-RUN npm i -g typescript@4.3.5 ts-node@10.0.0
-
-RUN mkdir /home/bsb-build
 ADD ./package.json /home/bsb-build/
 ADD ./package-lock.json /home/bsb-build/
 ADD ./lib /home/bsb-build/
-
-RUN mkdir /home/bsb
-WORKDIR /home/bsb
-
-# Default plugins available
-RUN npm i --save @bettercorp/service-base-plugin-events-rabbitmq
-RUN npm i --save @bettercorp/service-base-plugin-log-gelf
-
-# Actual plugin/service
-RUN npm i --save /home/bsb-build
 
 CMD npm start
