--- a/package.json
+++ b/package.json
@@ -1,1 +1,38 @@
-{"name":"@bettercorp/service-base","license":"AGPL-3.0-only","repository":{"url":"https://gitlab.com/BetterCorp/public/service-base"},"scripts":{"dev":"nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts","start":"node lib/index.js","build":"tsc","postinstall":"node ./install.js","version":"node ./build/version.js $0"},"files":["tsconfig.json","tslint.json","sourceFiles/**/*","lib/**/*","build/**/*","docker/**/*","install.js","install-plugin.js"],"main":"lib/index.js","version":"4.1.20210611094509","dependencies":{"@bettercorp/tools":"^1.0.6","@types/node":"^14.14.22","@types/uuid":"^8.0.0","events":"^3.1.0","uuid":"^3.4.0"},"devDependencies":{"ts-node":"^8.0.2","tslint":"^5.12.0","typescript":"^3.2.2"}}
+{
+  "name": "@bettercorp/service-base",
+  "license": "AGPL-3.0-only",
+  "repository": {
+    "url": "https://gitlab.com/BetterCorp/public/service-base"
+  },
+  "scripts": {
+    "dev": "nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts",
+    "start": "node lib/index.js",
+    "build": "tsc",
+    "postinstall": "node ./install.js",
+    "version": "node ./build/version.js $0"
+  },
+  "files": [
+    "tsconfig.json",
+    "tslint.json",
+    "sourceFiles/**/*",
+    "lib/**/*",
+    "build/**/*",
+    "docker/**/*",
+    "install.js",
+    "install-plugin.js"
+  ],
+  "main": "lib/index.js",
+  "version": "4.1.20210611094509",
+  "dependencies": {
+    "@bettercorp/tools": "^1.0.6",
+    "@types/node": "^14.14.22",
+    "@types/uuid": "^8.0.0",
+    "events": "^3.3.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.0",
+    "typescript": "^3.2.2"
+  }
+}
