--- a/package.json
+++ b/package.json
@@ -11,19 +11,28 @@
     "postinstall": "node ./install.js",
     "version": "node ./build/version.js $0"
   },
-  "files": ["tsconfig.json", "tslint.json", "sourceFiles/**/*", "lib/**/*", "build/**/*", "docker/**/*", "install.js", "install-plugin.js"],
+  "files": [
+    "tsconfig.json",
+    "tslint.json",
+    "sourceFiles/**/*",
+    "lib/**/*",
+    "build/**/*",
+    "docker/**/*",
+    "install.js",
+    "install-plugin.js"
+  ],
   "main": "lib/index.js",
   "version": "4.1.20210611101708",
   "dependencies": {
-    "@bettercorp/tools": "^1.0.6",
-    "@types/node": "^14.14.22",
-    "@types/uuid": "^8.0.0",
+    "@bettercorp/tools": "^1.0.8",
+    "@types/node": "^14.17.5",
+    "@types/uuid": "^8.3.1",
     "events": "^3.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
     "ts-node": "^8.0.2",
     "tslint": "^5.12.0",
-    "typescript": "^3.2.2"
+    "typescript": "^3.9.10"
   }
 }
