--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,7 @@ build:docker:bsb:
     - mkdir ~/.docker
     - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > ~/.docker/config.json
   script:
-    - docker build --tag @betterweb/better-service-base:base-latest --file docker/BSB_DockerFile .
-    - docker push @betterweb/better-service-base:base-latest
+    - docker build --tag betterweb/better-service-base:base-latest --file docker/BSB_DockerFile .
+    - docker push betterweb/better-service-base:base-latest
   after_script:
     - rm -f ~/.docker/config.json
