--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,29 @@ build:docker:bsb:
     - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > ~/.docker/config.json
   script:
     - docker build --tag betterweb/better-service-base:base-latest --file docker/BSB_DockerFile .
+  after_script:
+    - rm -f ~/.docker/config.json
+
+publish:docker:bsb:
+  image: docker:20.10.7
+  dependencies:
+    - build:npm
+    - build:docker
+  tags:
+    - build
+    - docker
+    - docker-dind
+  stage: publish:docker
+  rules:
+    - if: '$CI_COMMIT_REF_NAME == $CI_DEFAULT_BRANCH'
+      when: on_success
+    - when: never
+  before_script:
+    - docker --version
+    - rm -f ~/.docker
+    - mkdir ~/.docker
+    - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > ~/.docker/config.json
+  script:
     - docker push betterweb/better-service-base:base-latest
   after_script:
     - rm -f ~/.docker/config.json
