--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -22,7 +22,8 @@ build:docker:bsb:
     - mkdir ~/.docker
     - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > ~/.docker/config.json
   script:
-    - docker build --tag betterweb/better-service-base:base-latest --file docker/BSB_DockerFile .
+    - docker build --tag betterweb/better-service-base:base-$PACKAGE_VERSION --file docker/BSB_DockerFile .
+    - docker tag betterweb/better-service-base:base-$PACKAGE_VERSION betterweb/better-service-base:base-latest
   after_script:
     - rm -f ~/.docker/config.json
 
@@ -46,6 +47,7 @@ publish:docker:bsb:
     - mkdir ~/.docker
     - echo "{\"auths\":{\"https://index.docker.io/v1/\":{\"auth\":\"$DOCKER_TOKEN\"}}}" > ~/.docker/config.json
   script:
+    - docker push betterweb/better-service-base:base-$PACKAGE_VERSION
     - docker push betterweb/better-service-base:base-latest
   after_script:
     - rm -f ~/.docker/config.json
