--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   "main": "lib/index.js",
   "version": "4.1.20210611101708",
   "dependencies": {
-    "@bettercorp/tools": "^1.0.8",
+    "@bettercorp/tools": "^1.1.20210611125606",
     "@types/node": "^14.17.5",
     "@types/uuid": "^8.3.1",
     "events": "^3.3.0",
