--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "tslint.json",
     "sourceFiles/**/*",
     "lib/**/*",
+    "src/**/*",
     "build/**/*",
     "install.js",
     "install-plugin.js"
   ],
   "main": "lib/index.js",
-  "version": "4.1.20210611101708",
+  "version": "5.0.0",
   "dependencies": {
     "@bettercorp/tools": "^1.1.20210611181403",
     "@types/node": "^14.17.5",
@@ -32,6 +33,6 @@
   "devDependencies": {
     "ts-node": "^8.0.2",
     "tslint": "^5.12.0",
-    "typescript": "^3.9.10"
+    "typescript": "^4.3.5"
   }
 }
