--- a/package.json
+++ b/package.json
@@ -1,1 +1,36 @@
-{"name":"@bettercorp/service-base","license":"AGPL-3.0-only","repository":{"url":"https://gitlab.com/BetterCorp/public/service-base"},"scripts":{"dev":"nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts","start":"node lib/index.js","build":"tsc","postinstall":"node ./install.js","version":"node ./build/version.js $0"},"files":["tsconfig.json","tslint.json","sourceFiles/**/*","lib/**/*","build/**/*","install.js"],"main":"lib/index.js","version":"5.0.20210701152746-featurev5","dependencies":{"@bettercorp/tools":"^1.1.20210611181403","@types/node":"^14.17.5","@types/uuid":"^8.3.1","events":"^3.3.0","uuid":"^8.3.2"},"devDependencies":{"ts-node":"^8.0.2","tslint":"^5.12.0","typescript":"^4.3.5"}}
+{
+  "name": "@bettercorp/service-base",
+  "license": "AGPL-3.0-only",
+  "repository": {
+    "url": "https://gitlab.com/BetterCorp/public/service-base"
+  },
+  "scripts": {
+    "dev": "nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts",
+    "start": "node lib/index.js",
+    "build": "tsc",
+    "postinstall": "node ./install.js",
+    "version": "node ./build/version.js $0"
+  },
+  "files": [
+    "tsconfig.json",
+    "tslint.json",
+    "sourceFiles/**/*",
+    "lib/**/*",
+    "build/**/*",
+    "install.js"
+  ],
+  "main": "lib/index.js",
+  "version": "5.1",
+  "dependencies": {
+    "@bettercorp/tools": "^1.1.20210611181403",
+    "@types/node": "^14.17.5",
+    "@types/uuid": "^8.3.1",
+    "events": "^3.3.0",
+    "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "ts-node": "^8.0.2",
+    "tslint": "^5.12.0",
+    "typescript": "^4.3.5"
+  }
+}
