--- a/package.json
+++ b/package.json
@@ -8,20 +8,29 @@
     "dev": "nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts",
     "start": "node lib/index.js",
     "build": "tsc",
-    "postinstall": "node ./install.js",
+    "postinstall": "node ./lib/install.js",
     "version": "node ./build/version.js $0"
   },
-  "files": ["tsconfig.json", "tslint.json", "sourceFiles/**/*", "lib/**/*", "build/**/*", "install.js"],
+  "files": [
+    "tsconfig.json",
+    "tslint.json",
+    "sourceFiles/**/*",
+    "lib/**/*",
+    "build/**/*"
+  ],
   "main": "lib/index.js",
   "version": "5.2.0",
   "dependencies": {
     "@bettercorp/tools": "^1.1.20210611181403",
     "@types/node": "^14.17.5",
     "@types/uuid": "^8.3.1",
+    "@types/yargs": "^17.0.2",
     "events": "^3.3.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yargs": "^17.1.1"
   },
   "devDependencies": {
+    "mocha": "^9.0.3",
     "ts-node": "^8.0.2",
     "tslint": "^5.12.0",
     "typescript": "^4.3.5"
