Moving templates to non-build dir. readme updates. bootstrap fixes/updates

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "tslint.json",
     "sourceFiles/**/*",
     "lib/**/*",
-    "build/**/*"
+    "build/**/*",
+    "templates/**/*"
   ],
   "main": "lib/index.js",
   "version": "5.2.0",
