--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "node lib/index.js",
     "build": "tsc",
     "postinstall": "node ./lib/install.js",
-    "version": "node ./build/version.js $0"
+    "version": "node ./build/version.js $0",
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx"
   },
   "files": [
     "tsconfig.json",
@@ -31,9 +32,11 @@
     "yargs": "^17.2.1"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.4.0",
+    "@typescript-eslint/parser": "^5.4.0",
+    "eslint": "^8.2.0",
     "mocha": "^9.1.3",
     "ts-node": "^10.4.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.4.4"
   }
 }
