Updated tsconfig with new esv. Updated nodemon to use a config file instead. Fixes auto-reload issue. Added decorator info for tsc decorators

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,12 +9,14 @@
     "rootDir": "src",
     "sourceMap": true,
     "strict": true,
-    "target": "es2015",
-    "declaration": true
+    "target": "es2021",
+    "declaration": true,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
   },
   "linterOptions": {
     "exclude": [
-        "src/plugins/-*/*.*"
+      "src/plugins/-*/**/*.*"
     ]
   },
   "compileOnSave": true,
