restruct of dirs/interfaces. massive cleanup optimised events code (default events) added tests added ability to stream data to/from services. tests can be used by additional events services to test their events plugin

--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
     "build": "tsc",
     "postinstall": "node ./lib/install.js",
     "version": "node ./build/version-bcorp.js $0",
-    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx"
+    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
+    "test": "./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --reporter-options mochaFile=junit.xml",
+    "testDev": "./node_modules/mocha/bin/mocha"
   },
   "files": [
     "tsconfig.json",
     "tslint.json",
     "sourceFiles/**/*",
     "lib/**/*",
+    "test/**/*",
     "build/**/*",
     "templates/**/*"
   ],
@@ -35,6 +38,7 @@
     "@typescript-eslint/parser": "^5.7.0",
     "eslint": "^8.5.0",
     "mocha": "^9.1.3",
+    "mocha-junit-reporter": "^2.0.2",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
