--- a/package.json
+++ b/package.json
@@ -1,46 +1,1 @@
-{
-  "name": "@bettercorp/service-base",
-  "license": "AGPL-3.0-only",
-  "repository": {
-    "url": "https://gitlab.com/BetterCorp/public/service-base"
-  },
-  "scripts": {
-    "dev": "nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts",
-    "start": "node lib/index.js",
-    "build": "tsc",
-    "postinstall": "node ./postinstall.js",
-    "version": "node ./build/version-bcorp.js $0",
-    "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --reporter-options mochaFile=junit.xml",
-    "testDev": "./node_modules/mocha/bin/mocha"
-  },
-  "files": [
-    "tsconfig.json",
-    "tslint.json",
-    "sourceFiles/**/*",
-    "lib/**/*",
-    "test/**/*",
-    "build/**/*",
-    "templates/**/*",
-    "postinstall.js"
-  ],
-  "main": "lib/index.js",
-  "version": "7.1.0",
-  "dependencies": {
-    "@bettercorp/tools": "^1.2.20211118015545",
-    "@types/node": "^16.11.14",
-    "@types/uuid": "^8.3.3",
-    "@types/yargs": "^17.0.7",
-    "events": "^3.3.0",
-    "yargs": "^17.3.0"
-  },
-  "devDependencies": {
-    "@typescript-eslint/eslint-plugin": "^5.7.0",
-    "@typescript-eslint/parser": "^5.7.0",
-    "eslint": "^8.5.0",
-    "mocha": "^9.1.3",
-    "mocha-junit-reporter": "^2.0.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4"
-  }
-}
+{"name":"@bettercorp/service-base","license":"AGPL-3.0-only","repository":{"url":"https://gitlab.com/BetterCorp/public/service-base"},"scripts":{"dev":"nodemon -L --watch src/**/*.ts --watch plugins/**/*.ts --exec ts-node src/index.ts","start":"node lib/index.js","build":"tsc","postinstall":"node ./postinstall.js","version":"node ./build/version-bcorp.js $0","lint":"eslint src/ --ext .js,.jsx,.ts,.tsx","test":"./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --reporter-options mochaFile=junit.xml","testDev":"./node_modules/mocha/bin/mocha"},"files":["tsconfig.json","tslint.json","sourceFiles/**/*","lib/**/*","test/**/*","build/**/*","templates/**/*","postinstall.js"],"main":"lib/index.js","version":"7.1.20220109192714","dependencies":{"@bettercorp/tools":"^1.2.20211118015545","@types/node":"^16.11.14","@types/uuid":"^8.3.3","@types/yargs":"^17.0.7","events":"^3.3.0","yargs":"^17.3.0"},"devDependencies":{"@typescript-eslint/eslint-plugin":"^5.7.0","@typescript-eslint/parser":"^5.7.0","eslint":"^8.5.0","mocha":"^9.1.3","mocha-junit-reporter":"^2.0.2","ts-node":"^10.4.0","typescript":"^4.5.4"}}
