Changing branch ref .... actions not running

--- a/.github/workflows/documentation.yml
+++ b/.github/workflows/documentation.yml
@@ -3,7 +3,7 @@ name: Build Documentation
 on:
   push:
     branches:
-      - "documentation"
+      - documentation
 
 jobs:
   build-and-release:
