--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -29,4 +29,4 @@ pages:
       - public
     expire_in: 1 week
   only:
-    - master # this job will affect only the 'master' branch
+    - documentation # this job will affect only the 'documentation' branch
