--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,4 +1,4 @@
-include:
-  - project: 'BetterCorp/cicd'
-    ref: master
-    file: '/bsb-cicd-base.yml'
+#include:
+#  - project: 'BetterCorp/cicd'
+#    ref: master
+#    file: '/bsb-cicd-base.yml'
