--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,25 +29,8 @@ jobs:
       - run: npm i -g typescript ts-node
       - run: tsc -v ; ts-node -v
       - run: npm ci
-
-      - name: semver
-        id: semver
-        uses: paulhatch/semantic-version@v4.0.2
-        with:
-          tag_prefix: "v"
-          branch: ${GITHUB_REF#refs/heads/}
-          major_pattern: "(MAJOR)"
-          minor_pattern: "(MINOR)"
-          format: "${major}.${minor}.${patch}-beta${increment}"
-          change_path: "src/"
-          bump_each_commit: true
-          namespace: ""
-
-      - name: output version
-        run: |
-          echo "Setting version too: ${{ steps.semver.outputs.version }}";
-      - run: npm version ${{ steps.semver.outputs.version }}
       - run: npm run build
+      - run: npm run test
 
       - name: cleanup
         if: always()
