--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -46,7 +46,7 @@ jobs:
       - name: output version
         run: |
           echo "Setting version too: ${{ steps.semver.outputs.version }}";
-      - run: npm version ${{ steps.semver.outputs.version }}
+      - run: npm run version -- --branch=develop --version=${{ steps.semver.outputs.version }}
       - run: npm run build
       - run: npm run test
 
