Updating build process for github builds

--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -47,10 +47,16 @@ jobs:
         run: |
           echo "Setting version too: ${{ steps.semver.outputs.version }}";
       - run: npm run version -- --branch=develop --version=${{ steps.semver.outputs.version }}
-      - run: npm run build
-      - run: npm run test
 
       - run: rm -f ~/.npmrc ; rm -f ./.npmrc ; echo "//registry.npmjs.org/:_authToken=${{ secrets.NPM2_TOKEN_PUB }}" > ./.npmrc
+      - run: |
+          git config user.name "${{ secrets.NPM_NAME }}";
+          git config user.email "${{ secrets.NPM_EMAIL }}";
+          echo "Hello $(git config --get user.name)";
+
+      - run: npm run build
+      - run: npm run test
+      
       - run: npm publish
 
       - name: cleanup
