--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -14,6 +14,12 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x, 18.x]
+        experimental: [false]
+        include:
+          - node-version: 19.x
+            experimental: true
+
+    continue-on-error: ${{ matrix.experimental }}
 
     steps:
       - uses: actions/checkout@v3
