--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -2,6 +2,7 @@ version: 2
 updates:
 - package-ecosystem: npm
   directory: "/ui"
+  target-branch: "develop"
   schedule:
     interval: monthly
     time: "03:00"
