--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "postinstall": "node ./postinstall.js",
     "versionOld": "node ./build/version-bcorp.js $0",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "./node_modules/mocha/bin/mocha --reporter mocha-junit-reporter --reporter-options mochaFile=junit.xml",
-    "testDev": "./node_modules/mocha/bin/mocha"
+    "test": "node ./node_modules/mocha/bin/mocha.js --reporter mocha-junit-reporter --reporter-options mochaFile=junit.xml",
+    "testDev": "node ./node_modules/mocha/bin/mocha.js"
   },
   "files": [
     "tsconfig.json",
