--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -61,6 +61,18 @@ jobs:
       - run: npm run build
       - run: npm run test
 
+      - name: Test Report
+        uses: dorny/test-reporter@v1.5.0
+        with:
+          name: Tests
+          path: junit.json
+          reporter: mocha-json
+
+      - name: Coverage Report
+        uses: Tintef/nyc-reporter-action@0.2.5
+        with:
+          REPORTER: "json"
+
       - run: npm publish --tag rc
         if: contains(matrix.node-version, '18.x')
 
