--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "eslint": "^8.20.0",
     "mocha": "^10.0.0",
     "mocha-junit-reporter": "^2.0.2",
+    "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
   },
