--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "postinstall": "node ./postinstall.js",
     "versionOld": "node ./build/version-bcorp.js $0",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "node ./node_modules/nyc/bin/nyc.js --reporter json ./node_modules/mocha/bin/mocha.js --reporter json --reporter-options output=junit.json",
+    "test": "node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js --reporter json --reporter-options output=junit.json",
     "testDev": "node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js"
   },
   "files": [
@@ -31,7 +31,6 @@
     "@typescript-eslint/parser": "^5.31.0",
     "eslint": "^8.20.0",
     "mocha": "^10.0.0",
-    "mocha-junit-reporter": "^2.0.2",
     "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
