--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -6,7 +6,7 @@ on:
       - "develop"
 
 jobs:
-  build-and-publish-ea:
+  build_and_publish_ea:
     runs-on: ubuntu-latest
 
     strategy:
@@ -19,6 +19,8 @@ jobs:
 
     #continue-on-error: ${{ matrix.experimental }}
 
+    outputs:
+      version: ${{ steps.semver.outputs.version }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -79,6 +81,62 @@ jobs:
       - run: npm publish --tag ea
         if: contains(matrix.node-version, '18.x')
 
+      - run: npm pack
+        if: contains(matrix.node-version, '18.x')
+
+      - uses: actions/upload-artifact@v2
+        with:
+          name: published-package
+          path: bettercorp-service-base-*.tgz
+
       - name: cleanup
         if: always()
         run: rm -f ~/.npmrc ; rm -f ./.npmrc;
+
+  docker_build_ea:
+    needs: build_and_publish_ea
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      # ${GITHUB_REPOSITORY#*/}
+      - name: Prepare
+        id: prep
+        run: |
+          DOCKER_IMAGE=${{ secrets.DOCKER_USERNAME }}/service-base
+          TAGS="${DOCKER_IMAGE}:${{ needs.build_and_publish_ea.outputs.version }},${DOCKER_IMAGE}:ea-latest"
+
+          # Set output parameters.
+          echo ::set-output name=tags::${TAGS}
+          echo ::set-output name=docker_image::${DOCKER_IMAGE}
+
+      - uses: actions/download-artifact@v2
+        with:
+          name: published-package
+
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@master
+        with:
+          platforms: all
+
+      - name: Set up Docker Buildx
+        id: buildx
+        uses: docker/setup-buildx-action@master
+
+      - name: Login to DockerHub
+        if: github.event_name != 'pull_request'
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      - name: Build
+        uses: docker/build-push-action@v2
+        with:
+          builder: ${{ steps.buildx.outputs.name }}
+          context: .
+          file: ./docker/BSB.Dockerfile
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
+          push: true
+          tags: ${{ steps.prep.outputs.tags }}
