--- a/.github/workflows/tags.yml
+++ b/.github/workflows/tags.yml
@@ -7,7 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  build-and-publish-prod:
+  build_and_publish_prod:
     runs-on: ubuntu-latest
 
     strategy:
@@ -20,6 +20,8 @@ jobs:
 
     #continue-on-error: ${{ matrix.experimental }}
 
+    outputs:
+      version: ${{ steps.semver.outputs.version }}
     steps:
       - uses: actions/checkout@v3
         with:
@@ -72,36 +74,33 @@ jobs:
       - run: npm publish
         if: contains(matrix.node-version, '18.x')
 
+      - uses: actions/upload-artifact@v2
+        with:
+          name: published-package
+          path: bettercorp-service-base-*.tgz
+
       - name: cleanup
         if: always()
         run: rm -f ~/.npmrc ; rm -f ./.npmrc;
 
-  docker-build:
-    needs: build-and-publish-prod
+  docker_build_prod:
+    needs: build_and_publish_prod
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - uses: actions/download-artifact@v2
+        with:
+          name: published-package
+
+      # ${GITHUB_REPOSITORY#*/}
       - name: Prepare
         id: prep
         run: |
-          DOCKER_IMAGE=${{ secrets.DOCKER_USERNAME }}/${GITHUB_REPOSITORY#*/}
-          VERSION=latest
-          SHORTREF=${GITHUB_SHA::8}
+          DOCKER_IMAGE=${{ secrets.DOCKER_USERNAME }}/service-base
 
-          # If this is git tag, use the tag name as a docker tag
-          if [[ $GITHUB_REF == refs/tags/* ]]; then
-            VERSION=${GITHUB_REF#refs/tags/v}
-          fi
-          TAGS="${DOCKER_IMAGE}:${VERSION},${DOCKER_IMAGE}:${SHORTREF}"
-
-          # If the VERSION looks like a version number, assume that
-          # this is the most recent version of the image and also
-          # tag it 'latest'.
-          if [[ $VERSION =~ ^[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}$ ]]; then
-            TAGS="$TAGS,${DOCKER_IMAGE}:latest"
-          fi
+          TAGS="${DOCKER_IMAGE}:${{ needs.build_and_publish_prod.outputs.version }},${DOCKER_IMAGE}:latest"
 
           # Set output parameters.
           echo ::set-output name=tags::${TAGS}
@@ -128,7 +127,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
-          file: ./Dockerfile
-          platforms: linux/amd64,linux/arm64,linux/ppc64le
+          file: ./docker/BSB.Dockerfile
+          platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
           tags: ${{ steps.prep.outputs.tags }}
