--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -85,6 +85,7 @@ jobs:
         if: contains(matrix.node-version, '18.x')
 
       - uses: actions/upload-artifact@v2
+        if: contains(matrix.node-version, '18.x')
         with:
           name: published-package
           path: bettercorp-service-base-*.tgz
