--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -80,7 +80,11 @@ jobs:
       - run: npm publish --tag rc
         if: contains(matrix.node-version, '18.x')
 
+      - run: npm pack
+        if: contains(matrix.node-version, '18.x')
+
       - uses: actions/upload-artifact@v2
+        if: contains(matrix.node-version, '18.x')
         with:
           name: published-package
           path: bettercorp-service-base-*.tgz
