--- a/.github/workflows/develop.yml
+++ b/.github/workflows/develop.yml
@@ -126,7 +126,7 @@ jobs:
         with:
           builder: ${{ steps.buildx.outputs.name }}
           context: .
-          file: docker/BSB.Dockerfile
+          file: ./Dockerfile
           platforms: linux/amd64,linux/arm/v7,linux/arm64/v8,linux/ppc64le,linux/s390x
           push: true
           tags: |
