--- a/package.json
+++ b/package.json
@@ -9,19 +9,15 @@
     "start": "node lib/index.js",
     "build": "tsc",
     "postinstall": "node ./postinstall.js",
-    "versionOld": "node ./build/version-bcorp.js $0",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
     "test": "node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js --reporter json --reporter-options output=junit.json",
     "testDev": "node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js"
   },
+  "bin": {
+    "bsb": "lib/bootstrap.js"
+  },
   "files": [
-    "tsconfig.json",
-    "tslint.json",
-    "sourceFiles/**/*",
     "lib/**/*",
-    "test/**/*",
-    "build/**/*",
-    "templates/**/*",
     "postinstall.js"
   ],
   "main": "lib/index.js",
@@ -33,12 +29,12 @@
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
     "ts-node": "^10.9.1",
-    "typescript": "^4.7.4"
-  },
-  "dependencies": {
-    "@bettercorp/tools": "^2.0.20220714140658",
     "@types/node": "^18.6.2",
     "@types/yargs": "^17.0.10",
+    "typescript": "^4.7.4",
     "yargs": "^17.5.1"
+  },
+  "dependencies": {
+    "@bettercorp/tools": "^2.0.20220714140658"
   }
 }
