--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -131,3 +131,36 @@ jobs:
           tags: |
             betterweb/service-base:rc-latest
             betterweb/service-base:${{ needs.build_and_publish_ea.outputs.version }}
+
+  docs_build_rc:
+    runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [16.x]
+        # See supported Node.js release schedule at https://nodejs.org/en/about/releases/
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v3
+        with:
+          node-version: ${{ matrix.node-version }}
+          cache: "npm"
+          
+      - run: npm ci
+        working-directory: documentation/
+
+      - run: npm run build
+        working-directory: documentation/
+
+      - name: Update site
+        uses: cloudflare/wrangler-action@2.0.0
+        with:
+          apiToken: ${{ secrets.CF_API_TOKEN }}
+          accountId: ${{ secrets.CF_ACCOUNT_ID }}
+          command: pages publish documentation/.vuepress/dist --project-name=bsb-docs  --branch=rc
