--- a/.github/workflows/master.yml
+++ b/.github/workflows/master.yml
@@ -163,4 +163,4 @@ jobs:
         with:
           apiToken: ${{ secrets.CF_API_TOKEN }}
           accountId: ${{ secrets.CF_ACCOUNT_ID }}
-          command: pages publish documentation/.vuepress/dist --project-name=bsb-docs  --branch=rc
+          command: pages publish documentation/.vuepress/dist --project-name=bsb-documentation --commit-dirty=true --branch=rc
