--- a/.github/workflows/updatePlugins.yml
+++ b/.github/workflows/updatePlugins.yml
@@ -1,6 +1,13 @@
 name: Update documentation plugins
 
 on:
+  push:
+    branches:
+      - "master"
+      - "develop"
+  create:
+    tags:
+      - "*"
   schedule:
     - cron: "0 0/6 1/1 * *"
   workflow_dispatch:
