--- a/.github/workflows/updatePlugins.yml
+++ b/.github/workflows/updatePlugins.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - "master"
+      - "documentation"
       - "develop"
   create:
     tags:
@@ -11,7 +12,7 @@ on:
   schedule:
     - cron: "0 0/6 1/1 * *"
   workflow_dispatch:
-    branches: [master, develop]
+    branches: [documentation]
 
 jobs:
   build_and_update_plugins:
