Making sure infinite loop can't happen

--- a/.github/workflows/updatePlugins.yml
+++ b/.github/workflows/updatePlugins.yml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - "master"
-      - "documentation"
+      # - "documentation" # Specifically disabled to stop infinite build loop
       - "develop"
   create:
     tags:
