--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,28 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "*": ["types/*"] },
+    "paths": {
+      "*": ["types/*"]
+    },
     "module": "commonjs",
+    "noImplicitAny": true,
+    "removeComments": true,
+    "preserveConstEnums": true,
     "noImplicitReturns": true,
     "noUnusedLocals": true,
+    "sourceMap": true,
     "outDir": "lib",
     "rootDir": "src",
-    "sourceMap": true,
     "strict": true,
     "target": "es2021",
+    "lib": ["es2021"],
     "declaration": true,
     "emitDecoratorMetadata": true,
-    "experimentalDecorators": true
+    "experimentalDecorators": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "moduleResolution": "node"
   },
   "linterOptions": {
     "exclude": [
@@ -24,6 +34,7 @@
     "src"
   ],
   "exclude": [
-    "node_modules/**"
+    "node_modules/**",
+    "src/plugins/*-test*/**/*.*"
   ]
 }
