--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "build": "tsc",
     "postinstall": "node ./postinstall.js",
     "lint": "eslint src/ --ext .js,.jsx,.ts,.tsx",
-    "test": "node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js --reporter json --reporter-options output=junit.json",
-    "testDev": "node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js"
+    "test": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js --reporter json --reporter lcov ./node_modules/mocha/bin/mocha.js -r ts-node/register 'tests/**/*.ts' --reporter json --reporter-options output=junit.json",
+    "testDev": "env TS_NODE_COMPILER_OPTIONS='{\"module\": \"commonjs\" }' node ./node_modules/nyc/bin/nyc.js ./node_modules/mocha/bin/mocha.js -r ts-node/register 'tests/**/*.ts'"
   },
   "bin": {
     "bsb": "lib/bootstrap.js"
@@ -23,10 +23,14 @@
   "main": "lib/index.js",
   "version": "8.0.0",
   "devDependencies": {
-    "@types/node": "^18.6.2",
+    "@types/assert": "^1.5.6",
+    "@types/chai": "^4.3.3",
+    "@types/mocha": "^9.1.1",
+    "@types/node": "^18.7.14",
     "@types/yargs": "^17.0.10",
     "@typescript-eslint/eslint-plugin": "^5.31.0",
     "@typescript-eslint/parser": "^5.31.0",
+    "chai": "^4.3.6",
     "eslint": "^8.20.0",
     "mocha": "^10.0.0",
     "nyc": "^15.1.0",
