Added services for testing to pack

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,6 @@
     "src/tests/**",
     "node_modules/**",
     "src/plugins/*-test*/**/*.*",
-    "src/plugins/-*/**/*.*",
-    "src/plugins/service-*/**/*.*"
+    "src/plugins/-*/**/*.*"
   ]
 }
