Added tests to output for testing

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -34,8 +34,8 @@
     "src"
   ],
   "exclude": [
-    "src/tests/**",
     "node_modules/**",
+    "src/plugins/*-test*/**/*.*",
     "src/plugins/-*/**/*.*"
   ]
 }
