Changing package version for build conflicts

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "postinstall.js"
   ],
   "main": "lib/index.js",
-  "version": "8.0.0",
+  "version": "8.0.0-rc",
   "devDependencies": {
     "@types/assert": "^1.5.6",
     "@types/chai": "^4.3.3",
